--- a/src/components/sideNav/sideNav.css
+++ b/src/components/sideNav/sideNav.css
@@ -49,3 +49,15 @@
     color: #fff;
     font-weight: 700;
 }
+
+@media screen and (max-width: 780px) {
+    .side_nav a {
+        font-size: 13px;
+    }
+
+    .side_nav p {
+        text-decoration: none;
+        color: #fff;
+        font-size: 14px;
+    }
+}
