--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -127,3 +127,13 @@
     padding: 2px 6px;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 780px) {
+    .profile_base p {
+        font-size: 12px;
+    }
+
+    .__picture_bio div {
+        font-size: 13px;
+    }
+}
